--- a/src/Components/Todo/Todo.module.css
+++ b/src/Components/Todo/Todo.module.css
@@ -7,5 +7,5 @@
   height: 100%;
   width: 100%;
   position: relative;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana,Arial, Tahoma, sans-serif;
 }
