--- a/src/Components/TodoListItems/TodoListItems.module.css
+++ b/src/Components/TodoListItems/TodoListItems.module.css
@@ -14,7 +14,10 @@
 }
 .todoItems_Checked {
   color: #c2c4c4;
+  text-decoration: line-through;
+  position: relative;
 }
+
 .button {
   position: relative;
   right: 10px;
@@ -33,3 +36,24 @@
   background-color: #50e3a4;
   border-color: #3ebd86;
 }
+
+/* animation for the line-through on the text */
+
+/* @keyframes strike{
+  0%   { width : 0; }
+  100% { width: 100%; }
+}
+
+.todoItems_Checked::after {
+  content: ' '; position: absolute;
+  top: 50%; left: 0; width: 100%;
+  height: 1px; background: rgb(146, 146, 146);
+  animation-name: strike;animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; 
+} */
+
+
+
+
